@@ -4,7 +4,7 @@ Date: 2012-01-05
 Title: Distribution Utilities
 Author: David Scott <d.scott@auckland.ac.nz>
 Maintainer: David Scott <d.scott@auckland.ac.nz>
-Depends: R (>= 2.3.0)
+Depends: R (>= 2.3.0), RUnit
 Suggests: GeneralizedHyperbolic, VarianceGamma, SkewHyperbolic
 Encoding: latin1
 Description: This package contains utilities which are of use in the
