@@ -15,6 +15,7 @@ if(require("RUnit", quietly = TRUE))
     }
 
     library(package = pkg, character.only = TRUE)
+
     if(!(exists("path") && file.exists(path)))
         path <- system.file("unitTests", package = pkg)
 
