@@ -1,3 +1,9 @@
+2012-01-17    <d.scott@auckland.ac.nz>
+
+	* incompleteBesselK, incompleteBesselKR changed to have default
+	nmax = 200, because incompleteBesselK failed otherwise for x = 0.5,
+	y = 0.5, lambda = -1
+
 2012-01-05    <d.scott@auckland.ac.nz>
 
 	* distIneqMassartPlot labels changed
